examples/alpha-deployment-kuard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  namespace: alpha
spec: 
  selector: 
    matchLabels:
      app: kuard
  replicas: 3
  template:
    metadata:
      labels:
        app: kuard
    spec: 
      containers: 
      - name: kuard
        image: 192.168.121.3/alpha/kuard:latest
        ports: 
        - name: http
          containerPort: 80
        # - name: ssh
        #   containerPort: 22
        # env:
        # - name: ROOT_PASS
        #   value: VMware1!
