examples/busybox_deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: busybox-deployment
  namespace: bravo
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: 192.168.121.2/bravo/busybox:latest
        args:
        - sleep
        - "1000"
      restartPolicy: Always
