examples/cassandra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra-deployment
  namespace: marketing
spec:
  selector:
    matchLabels:
      app: cassandra
  replicas: 1
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
      - name: cassandra
        image: cassandra:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512M
            cpu: "1"
