examples/kuard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  namespace: marketing
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 2
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 80
