examples/management_deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: management-pod
  namespace: alpha
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: 192.168.121.2/alpha/busybox:latest
        ports: 
        - name: ssh
          containerPort: 22
        args: 
        - sleep
        - "3600"
