examples/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: marketing
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: k8s.gcr.io/redis:latest
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: 512M
            cpu: "1"
