examples/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: ingress.ray.salab.local
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
