examples/nginx-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # - ports:
  #   - protocol: TCP
  #     port: 80
  #   - protocol: TCP
  #     port: 443
  - from:
    - ipBlock: 
        cidr: 192.168.10.0/24
    - ipBlock: 
        cidr: 10.29.12.192/27
    ports: 
    - protocol: TCP
      port: 80
  egress:
  - ports:
    - protocol: TCP
      port: 8443
